2005-06-03  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* reference.src: Add pointers to the new gnomeprint reference.

	* Makefile (LOCAL_TARBALLS): Add gnomeprint docs tarball.

2005-05-30  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* documentation/pygtkmozembed.tar.bz2: Update docs with latest
	Gian Mario Tagliaretti's work.

2005-05-30  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* consulting.src: converted to utf8

	* feedback.src: fix typo and link target

2005-05-24  Rafael Villar Burke <pachi@mmn-arquitectos.com>

	* applications.src: Added CeeMedia.

2005-05-23  Christian Reis <kiko@async.com.br>

	* applications.src: Fixed up Gajim.

2005-05-21  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* newsitems.py: Advertise the new docs.

	* Makefile (local-tarballs): Add support for local documentation
	tarballs.

	* reference.src: Add links to new Gnome Python Extras reference
	documentation.

2005-05-19  Rafael Villar Burke <pachi@mmn-arquitectos.com>

	* applications.src: Added Aeternal, The Orange Slice,
	Pybber, PyMServ, RoutePlanner, Tennacles, GnoFract4D, OpenEV,
	IceMe.

2005-05-18  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.py (item): added gnomepython 2.11.2 and
	gnomepythonextras 2.11.2. Patch by pachi

2005-05-15  Christian Reis <kiko@async.com.br>

	* applications.src: Added purl

2005-05-10  Johan Dahlin  <jdahlin@async.com.br>

	* applications.src: Update url for sabayon

	* default.css: 
	* consulting.src: Added Sicem and update style

2005-05-10  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* Makefile (SRC_PAGES): add consulting.src to the list
	of src pages

	* applications.src: Added Quod Libet

2005-05-09  Johan Dahlin  <jdahlin@async.com.br>

	* newsitems.py (item): Release 2.6.2

	* applications.src: Added SMEG
	
	* consulting.src: New page

	* head.src, feedback.src: Add links to consulting

2005-05-07  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* applications.src: added Pyne

2005-05-03  Lorenzo Gil Sanchez  <lgs@sicem.biz>
